flux/apps/pinfra/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: registry.ereslibre.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: registry
            port:
              name: registry
  tls:
  - hosts:
    - registry.ereslibre.net
    secretName: registry-ereslibre-net-cert
